Set vnode size after creation(*).  Fixes cp(1) from ntfs, the complaint in the "ntfs ubc_uiomove error" (ubc_uiomove error was not coming from ntfs but instead the "to" file system) and PR kern/38531 (well, I assume the submitter wanted cp(1) working on ntfs instead of mangling ntfs the way the PR title suggests).  Yes, mmap works on ntfs like it always has.

*) well, um, and in other places too ... uuuh ... no comments.
but I guess this works as long as in-kernel ntfs doesn't grow write
support.